--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,8 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-    
-    
+        
       - name: Medias
         uses: lowlighter/metrics@latest
         with:
@@ -83,4 +82,24 @@ jobs:
           plugin_anilist_shuffle: yes
           plugin_anilist_user: .user.login
           
-
+      - name: Favorites manga and currently reading
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.anilist.manga.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_anilist: yes
+          plugin_anilist_medias: manga
+          plugin_anilist_sections: reading
+          plugin_anilist_limit: 1
+          
+      - name: MBTI Personality profile
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.16personalities.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_16personalities: yes
+          plugin_16personalities_url: ${{ https://www.16personalities.com/profiles/967e1f1656cab }}
+          plugin_16personalities_sections: personality, profile, traits
+          plugin_16personalities_scores: no
