--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -74,24 +74,17 @@ jobs:
           user: jonapecabug
           template: classic
           base: ""
+          config_order: anilist, music
           plugin_anilist: yes
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 20
-          plugin_anilist_medias: anime
-          plugin_anilist_sections: favorites, characters
+          plugin_anilist_medias: anime, manga
+          plugin_anilist_sections: favorites, characters, reading
           plugin_anilist_shuffle: yes
           plugin_anilist_user: .user.login
-          
-      - name: Favorites manga and currently reading
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.anilist.manga.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_anilist: yes
-          plugin_anilist_medias: manga
-          plugin_anilist_sections: reading
-          plugin_anilist_limit: 1
+          plugin_music: yes
+          plugin_music_playlist: ${{ secrets.PLAYLIST }}
+          plugin_music_limit: 10
           
       - name: MBTI Personality profile
         uses: lowlighter/metrics@latest
@@ -100,6 +93,6 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_16personalities: yes
-          plugin_16personalities_url: ${{ https://www.16personalities.com/profiles/967e1f1656cab }}
+          plugin_16personalities_url: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
           plugin_16personalities_sections: personality, profile, traits
           plugin_16personalities_scores: no
