--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -74,7 +74,7 @@ jobs:
           user: jonapecabug
           template: classic
           base: ""
-          config_order: anilist, music
+          config_order: anilist
           plugin_anilist: yes
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 20
@@ -82,15 +82,27 @@ jobs:
           plugin_anilist_sections: favorites, characters, reading
           plugin_anilist_shuffle: yes
           plugin_anilist_user: .user.login
+          
+      - name: Music
+        uses: lowlighter/metrics@latest
+        with:
+          filename: apple_music.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: jonapecabug
+          template: classic
+          base: ""
           plugin_music: yes
+          plugin_music_provider: apple
           plugin_music_playlist: ${{ secrets.PLAYLIST }}
-          plugin_music_limit: 10
+          plugin_music_limit: 5
           
       - name: MBTI Personality profile
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.16personalities.svg
+          filename: 16personalities.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          user: jonapecabug
+          template: classic
           base: ""
           plugin_16personalities: yes
           plugin_16personalities_url: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
