--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,10 +25,10 @@ jobs:
           config_timezone: Asia/Manila
           plugin_habits: yes
           plugin_habits_charts: yes
-          plugin_habits_charts_type: chartist
+          plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
-          plugin_habits_from: 200
+          plugin_habits_from: 1000
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
           plugin_habits_trim: yes
