--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -83,28 +83,24 @@ jobs:
           plugin_anilist_shuffle: yes
           plugin_anilist_user: .user.login
           
-      - name: Music
+      - name: Apple Music - Random track from playlist
         uses: lowlighter/metrics@latest
         with:
-          filename: apple_music.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: jonapecabug
-          template: classic
+          filename: metrics.plugin.music.playlist.svg
+          token: NOT_NEEDED
           base: ""
           plugin_music: yes
           plugin_music_provider: apple
-          plugin_music_playlist: ${{ secrets.PLAYLIST }}
+          plugin_music_playlist: https://embed.music.apple.com/fr/playlist/usr-share/pl.u-V9D7m8Etjmjd0D
           plugin_music_limit: 5
           
       - name: MBTI Personality profile
         uses: lowlighter/metrics@latest
         with:
-          filename: 16personalities.svg
+          filename: metrics.plugin.16personalities.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          user: jonapecabug
-          template: classic
           base: ""
           plugin_16personalities: yes
           plugin_16personalities_url: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
-          plugin_16personalities_sections: personality, profile, traits
+          plugin_16personalities_sections: personality, traits
           plugin_16personalities_scores: no
