--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -79,7 +79,7 @@ jobs:
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 20
           plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites, characters, reading
+          plugin_anilist_sections: favorites, characters
           plugin_anilist_shuffle: yes
           plugin_anilist_user: .user.login
           
